@@ -3,13 +3,13 @@ Hash: SHA1
 
 AUX rxml_reader_attribute.patch 713 RMD160 638da7e111057d23cddfe98acf04f8f0cea344db SHA1 c57d3c63a9a5457bcb4c1f75fcdc88afd4f4b459 SHA256 a9c014b0f8da547d268d64a04e2202bb8429ed336332b5df730e76850a97760d
 DIST libxml-ruby-1.1.3.gem 179712 RMD160 6354eb96649d21f33e6869dafcb391525af990f4 SHA1 583246a619fe4c50594727f2023c21e83d743360 SHA256 91f52ed34fc0a8df8e9aecb0878d5a55246f0e264a25629fa49e0b1a2eb087a3
-EBUILD libxml-ruby-1.1.3.ebuild 841 RMD160 35f529a9257b1c5560859de47e6c5d6817907f8a SHA1 fb284f79f83df6241e82e279602badddbea78479 SHA256 d3c3f132dad60b18ad99dc92281e83683a35870bdf7a93f067eafbcfdaf566e5
-MISC ChangeLog 371 RMD160 cac357dc5128cc51b03880a799235090f679f22d SHA1 eb0633e6e5a2342dd8a16a07bc5dde9b33dac4e0 SHA256 6a4d6a5df96584aa16a820afd3d12b952bfe682960d07f7f1a91055a852683ca
+EBUILD libxml-ruby-1.1.3.ebuild 1068 RMD160 abb31986eea75c1c3dbda27c3a5dffb910964378 SHA1 56a78462377aaeb41b53ed055a2a5175a50261f1 SHA256 a412a60a9a96279080d2d61d6c8c6f80ba5aa264a244807e66cd5fcf282d34aa
+MISC ChangeLog 494 RMD160 cb334eb867644747355203cdf190756085ad676b SHA1 92f3b618279500c05190e36f1d7a7b96a23e5d51 SHA256 8b9d829b64c009c6c7626b52c33ae9abbcd5906186f89b2be8da60504500bba1
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkvROIgACgkQeM7EJeUH71MN2QCfcbT/E0URsWsdP88SLRCkadUb
-D7AAn02dg/eJZfpCA5seR0xcsX5eWuW/
-=NQ+X
+iEYEARECAAYFAkvRO7YACgkQeM7EJeUH71P3UwCdGD/gGFy4KQrNF4Z4JRu7rM0R
+wrsAoIrB8j7GcP2LkM0WrydZ3bTrYiGv
+=iOQr
 -----END PGP SIGNATURE-----
