@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Apr 2010; Hans de Graaff <graaff@gentoo.org> libxml-ruby-1.1.3.ebuild:
+  Properly compile and install the extension.
+
 *libxml-ruby-1.1.3 (23 Apr 2010)
 
   23 Apr 2010; Hans de Graaff <graaff@gentoo.org> +libxml-ruby-1.1.3.ebuild,
